Refactored code to use SnakeYAML Engine (#141)
Signed-off-by: antublue <antublue@antublue.org>